# site

./: .gitignore  .nojekyll  .pdm-python  .pre-commit-config.yaml  CNAME  README.md  _quarto.yml  _variables.yml  about.html  about.qmd  blog.html  blog.qmd  blog.xml  custom.scss  cv.html  cv.qmd  index.html  index.qmd  index.xml  listings.json  pyproject.toml  references.bib  references.html  references.qmd  repos.yml  robots.txt  search.json  sitemap.xml  woodworking.html  woodworking.qmd
_site/: index.xml  search.json  sitemap.xml
assets/: custom.scss  (+4 more)
blog/aging-curve/: .pdm-python  index.html  index.ipynb  index.qmd  pyproject.toml
blog/aging-curve/data/: mind-in-eyes.csv
blog/aging-curve/src/aging_curve/: __init__.py
blog/fantasy-football/: .pdm-python  index.html  index.ipynb  index.py  index.qmd  index.tmp  pyproject.toml
blog/fantasy-football/.jupyter_cache/: global.db
blog/fantasy-football/.jupyter_cache/executed/01cebe8b3027506adf075c146c38471c/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/046ad8508ace802a906d72fb11c39d31/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/0c6f2c116faa1cc8c7cde6fd6eaa3e5a/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/1090cc608019b71d9ce5940a735c9f98/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/11e1c28c9974799586e9c23284876169/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/12745bfeb7a4c0b61ba459374d2fff2b/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/12fc9800642c048047926b1e8203b671/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/1949bd08fd3964eccc04c5952d6b56c1/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/1b98593c0c5dc314bdacc70cbdd5e8b2/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/1d30c00712d6eda4e89d39921ec6828c/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/1fc4969b6facc66735f29c1b5515960a/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/256fe7ea74de4ac5965dc980a62402b6/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/26d3498e536f5ae838a3ff8c07c61066/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/26ebe62a16ff3fdeda3dff0f2c0efa89/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/27b4a0e0ed5bb7f070ab3dd31bbc059b/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/28e374630a8f58649740305c56fdb7d3/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/2997604eb6d3bfca1cfd175d499d342b/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/29f328e67ba6e6b073c67019d9acd0e4/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/2a031450e2ab0ce32a276e029aa5083c/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/2b3592e2831cd722f6b032a11e96100c/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/2c8491c3f9e91044624e48eba33a8852/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/2f7c01ebf07ba99164fe108098a17aff/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/30eb9529c047df757aebdbfd1f19ce67/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/33313625d5fdef2cab85e879ae759865/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/333be37a7b664ad7639938286dc4c747/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/35988e4f4d4a33df528781ca883356d7/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/3978a71c9148cc05501d460fa541f1af/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/3ab0161ca22132578f6b53897979085a/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/3b5aea482dfc48d15ef98b32e32aae9b/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/3c01adb7a36d0ea2f56220d2b693708c/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/3db5bfb6467ab5d7f3b5daa41d37492e/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/40455c83408c498c4e083e2e0617f092/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/41f5bf4a136a9c97a4ca3b71c62699aa/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/42f0cc5148d438e7be34622fd6bda02e/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/44a9fedf442ebf2763a0d342e7ef495f/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/4a3c9491bd292a54c3bd5542dbd23d21/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/4b05442d49aa0b33e3880922ee2b68c1/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/4d31016ed7c91b997cbbf456fab33243/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/4e2299615af01ca668302d75b18c3eb2/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/4e97cbb078d7ab737751ea2fe8a933dd/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/4f368ea8ceb95f3ed447d14d8c5d35ad/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/50cce87b0f1402414ca69000952de38f/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/52eeae73a8c5eded12dc1e372f5035c8/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/53428640d292d3498f2ddb686595bce4/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/58d8ea5531b45d06bcc0def8e1d0a5a9/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/5915f8602e01368358099b85b5851fd4/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/5c589b10ebca23af5f1af06d78ea721d/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/5d72f724a9048bdb0b6d3efff786c19a/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/5f3cfa49e75c3728162c9d0d72ce4f3a/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/603606cf093c614185c00d3d08c3f2b2/: base.ipynb
blog/fantasy-football/.jupyter_cache/executed/607437ba7196e7f5bde20d7543f0c7ee/: base.ipynb
blog/fantasy-football/src/fantasy_football/: __init__.py
blog/non-monotonic/: index.html  index.ipynb  index.py  pyproject.toml
blog/non-monotonic/.ipynb_checkpoints/: index-checkpoint.ipynb
blog/non-monotonic/.jupyter_cache/: global.db
blog/non-monotonic/data/: experiment-2.csv
blog/non-monotonic/index_files/execute-results/: html.json
blog/non-monotonic/src/non_monotonic/: __init__.py
(+146 files in other folders)
