[project]
name = "blog"
version = "0.1.0"
authors = [
    { name = "Luís Assunção", email = "assuncaolfi@gmail.com" }
]
dependencies = [
    "seaborn~=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
