[project]
name = "aging-curve"
version = "0.1.0"
authors = [
    { name = "Luís Assunção", email = "assuncaolfi@gmail.com" }
]
dependencies = [
    "blog @ git+https://github.com/assuncaolfi/site/",
    "jupyter-cache~=0.6.1",
    "jupyter~=1.0.0",
    "numpy~=1.24.4",
    "patsy~=0.5.6",
    "polars~=0.19.17",
    "pyarrow~=14.0.1",
    "pymc~=5.6.1",
    "rich~=13.7.0",
    "seaborn~=0.13.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true
