[project]
name = "aging-curve"
version = "0.1.0"
authors = [
    { name = "Luís Assunção", email = "assuncaolfi@gmail.com" }
]
dependencies = [
    "blog @ git+https://github.com/assuncaolfi/site/",
    "numpy~=1.24.4",
    "patsy~=0.5.6",
    "polars~=0.19.17",
    "pyarrow~=14.0.1",
    "pymc~=5.6.1",
    "rich~=13.7.0",
    "seaborn~=0.13.0",
    "jupyter>=1.0.0",
    "jupyter-cache>=1.0.0",
]
requires-python = ">= 3.11"

[project.scripts]
hello = "aging_curve:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aging_curve"]
