[project]
name = "aging-curve"
version = "0.1.0"
authors = [
    {name = "Luís Assunção", email = "assuncaolfi@gmail.com"},
]
dependencies = [
    "blog @ git+https://github.com/assuncaolfi/site",
    "jupyter-black>=0.3.4",
    "jupyter-cache>=1.0.0",
    "jupyter>=1.0.0",
    "polars>=0.20.23",
    "pymc>=5.14.0",
    "seaborn>=0.13.2",
    "pyarrow>=16.0.0",
    "jupytext>=1.16.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
