[project]
name = "fantasy-football"
version = "0.1.0"
authors = [
    { name = "Luís Assunção", email = "assuncaolfi@gmail.com" }
]
dependencies = [
    "pydantic~=2.3.0",
    "polars~=0.19.3",
    "numpy~=1.24.4",
    "pulp~=2.7.0",
    "rich~=13.6.0",
    "seaborn~=0.13.0",
    "bambi~=0.13.0",
    "pyarrow~=14.0.1",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter~=1.0.0",
    "jupyter-cache~=0.6.1",
]

[tool.hatch.metadata]
allow-direct-references = true
