[project]
name = "fantasy-football"
version = "0.1.0"
authors = [
    { name = "Luís Assunção", email = "assuncaolfi@gmail.com" }
]
dependencies = [
    "bambi~=0.13.0",
    "blog @ git+https://github.com/assuncaolfi/site/",
    "jupyter~=1.0.0",
    "numpyro~=0.13.2",
    "numpy~=1.24.4",
    "polars~=0.19.3",
    "pulp~=2.7.0",
    "pyarrow~=14.0.1",
    "pydantic~=2.3.0",
    "seaborn~=0.13.0",
]
requires-python = ">= 3.11"

[project.scripts]
hello = "fantasy_football:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fantasy_football"]
