[project]
name = "fantasy-football"
version = "0.1.0"
authors = [
    { name = "Luís Assunção", email = "assuncaolfi@gmail.com" },
]
dependencies = [
    "cvxpy>=1.5.2",
    "jupyter-black>=0.3.4",
    "jupyter-cache>=1.0.0",
    "jupyter>=1.0.0",
    "jupytext>=1.16.2",
    "matplotlib>=3.9.1",
    "numpy>=2.0.0",
    "polars>=0.19.19",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
